--- a/homework1/exercise1/CMakeLists.txt
+++ b/homework1/exercise1/CMakeLists.txt
@@ -14,3 +14,6 @@ target_link_libraries(exercise1 ${SSL_LIBS})
 
 add_executable(main main.cpp)
 target_link_libraries(main ${SSL_LIBS})
+
+add_executable(exercise2 ex2.cpp)
+target_link_libraries(exercise2 ${SSL_LIBS})
