--- a/homework1/exercise1/CMakeLists.txt
+++ b/homework1/exercise1/CMakeLists.txt
@@ -17,3 +17,6 @@ target_link_libraries(main ${SSL_LIBS})
 
 add_executable(exercise2 ex2.cpp)
 target_link_libraries(exercise2 ${SSL_LIBS})
+
+add_executable(exercise3 ex3.h A.cpp B.cpp KM.cpp ex3.cpp)
+target_link_libraries(exercise3 ${SSL_LIBS})
